# media-archive

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
media-archive/: Cargo.toml
media-archive/src/: file_hash.rs  lib.rs
media-archived/: Cargo.toml
media-archived/src/: main.rs  server.rs
